search/static/search.css
/* body down when navbar gets thick */
body {
	padding-top: 70px;
}

@media (max-width: 767px) {
	body {
		padding-top: 55px;
	}
}

div#lightbox {
	display: none;
	z-index: 1031;
    height: 100%;
    width: 100%;
	background-color: rgba(0,0,0,0.5);
    top: 0;
    left: 0;
    position: fixed;
}

div#lightbox_content_wrap {
	display: none;
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	/*height: 70%;*/
	background-color: white;
	z-index:1032;
	box-shadow: 2px 2px 10px #333333;
	overflow: auto;
}

@media (min-width: 767px) {
	div#lightbox_content_wrap {
		top: 0px;
		left: 10%;
		width: 80%;
	}
}

@media (min-width: 900px) {
	div#lightbox_content_wrap {
		top: 0px;
		left: 20%;
		width: 60%;
	}
}

@media (min-width: 1199px) {
	div#lightbox_content_wrap {
		top: 15%;
		left: 30%;
		width: 40%;
	}
}

a:hover {
	cursor: pointer;
}

a.badge {
	font-weight: normal;
    padding: 2px;
    padding-left: 4px;
    padding-right: 4px;
}

a.badge.tag-T {
	border-style: solid;
	color: black;
	background-color: #FFFFFF;
	border-color: #CC0022;
}
a.badge.tag-T:hover {
	color: white;
	background-color: #CC0022;
}

a.badge.tag-O {
	border-style: solid;
	color: black;
	background-color: #FFFFFF;
	border-color: #007777;
}
a.badge.tag-O:hover {
	color: white;
	background-color: #007777;
}

a.badge.tag-P {
	border-style: solid;
	color: black;
	background-color: #FFFFFF;
	border-color: #DD6600;
}
a.badge.tag-P:hover {
	color: white;
	background-color: #DD6600;
}

a.badge.tag-C {
	border-style: solid;
	color: black;
	background-color: #FFFFFF;
	border-color: #444444;
}
a.badge.tag-C:hover {
	color: white;
	background-color: #444444;
}

dt {
	position: relative;
	top: 4px;
}

div.highlight {
    padding: 40px;
    padding-top: 20px;
    padding-bottom: 10px;
    border-radius: 5px;
    border: 1px solid #DDDDDD;
}

div.sidelabel {
	text-align: right;
	font-size: 18px;
	margin-top: -4px;
}

div#person-about *:first-child {
	margin-top: 0;
}

div#person-about {
	font-size: 16px;
}

div.redactor_box {
	max-width: none;
}

label {
	margin-top: 15px;
}

ul.errorlist {
	padding-left: 0;
}

ul.errorlist li {
	list-style-type: none;
	background-color: #d9534f;
	color: #ffffff;
	padding-left: 5px;
	padding-right: 5px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}

/* Sticky footer styles
-------------------------------------------------- */
html, body {
	height: 100%;
	/* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
#wrap {
	min-height: 100%;
	height: auto !important;
	height: 100%;
	/* Negative indent footer by its height */
	margin: 0 auto -60px;
	/* Pad bottom by footer height */
	padding: 0 0 60px;
}

/* Set the fixed height of the footer here */
#footer {
	height: 60px;
}


/* Custom page CSS
-------------------------------------------------- */
/* Not required for template or sticky footer method. */

#wrap > .container {
	padding: 60px 15px 0;
}
.container .credit {
	margin: 20px 0;
}

#footer > .container {
	padding-left: 15px;
	padding-right: 15px;
}

code {
	font-size: 80%;
}

